Fix slider control z-index after previous fix.

--- a/app/assets/stylesheets/_common-ui/_slider.sass
+++ b/app/assets/stylesheets/_common-ui/_slider.sass
@@ -59,7 +59,7 @@ $slideHoverArrowSpacing: 0.357em
   @extend %transition--base
   position: absolute
   width: 100%
-  z-index: 4
+  z-index: 6
 
   .homepage &
     top: 350px
